--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -41,6 +41,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: latest
+          ECR_REPOSITORY: 128433652804.dkr.ecr.us-east-1.amazonaws.com
         run: |
           docker tag dermoapp-api $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
